--- a/AlcoholFree WatchKit Extension/Info.plist
+++ b/AlcoholFree WatchKit Extension/Info.plist
@@ -12,5 +12,14 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
+	<key>WKBackgroundModes</key>
+	<array>
+		<string>self-care</string>
+		<string>workout-processing</string>
+	</array>
 </dict>
 </plist>
