SetDrinkTypeView, SetTargetAmountView까지 재구현 완료

--- a/AlcoholFree WatchKit Extension/Info.plist
+++ b/AlcoholFree WatchKit Extension/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>0NanumSquareRoundOTFL.otf</string>
+		<string>1NanumSquareRoundOTFR.otf</string>
+		<string>2NanumSquareRoundOTFB.otf</string>
+		<string>3NanumSquareRoundOTFEB.otf</string>
+	</array>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
