--- a/AlcoholFree WatchKit Extension/Info.plist
+++ b/AlcoholFree WatchKit Extension/Info.plist
@@ -7,7 +7,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.shp7724.AlcoholFree.watchkitapp</string>
+			<string>com.jeongsik12345.AlcoholFree.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
